# agentic-ecommerce

./: .gitignore  README.md  import_products.py  products.json  pyproject.toml
data/database/: __init__.py  connection.py  order_models.py  product_schema.py  shipping_schema.py
data/golden_data/: test_cases.json
data/handbooks/: general_handbook.md
reports/: REPORT.MD
src/: build_index.py  config.py  main.py
src/data/database/: connection.py  product_model.py
src/data/handbooks/: general_handbook.md
src/data/jsonl/: handbook_chunks.jsonl  product_chunks.jsonl
src/indexing/: __init__.py  chunking.py  embeddings.py  parsing.py
src/middlewares/: __init__.py  tokenValidationMiddleware.py
src/querying/: __init__.py  service.py
src/querying/agents/: __init__.py  general_info.py  orchestrator.py  order.py
src/querying/tools/: __init__.py  order.py  retrieval.py
src/routes/: __init__.py  admin.py  user.py
src/utils/: __init__.py  cart.py  context.py  evaluation.py  llm.py  memory.py  similarity.py  storage.py
tests/: __init__.py  test_runner.py
