[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ecommerce"
version = "0.1.0"
description = "Ecommerce App with AI agents"
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]==0.124.2",
    "sqlalchemy==2.0.23",
    "psycopg2-binary>=2.9.0",
    "python-dotenv==1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-chroma>=1.0.0"
]

[project.optional-dependencies]
dev = []